--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
 language: go
 go:
   - 1.11.x
+  - 1.12.x
 os:
   - linux
   - osx
+  - windows
 env:
   - GO111MODULE=on
 script:
-  - go build
-  - go test ./...
+#  - go build
+#  - go test ./...
+   - go version
+
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: curl -sL https://git.io/goreleaser | bash
+    on:
+      tags: true
+      condition: $TRAVIS_OS_NAME = linux
